# Omnispindle

./: .env  .gitignore  .gitmodules  AI_INSIGHTS_IMPLEMENTATION.md  API_DOCUMENTATION.md  API_MIGRATION_SUMMARY.md  CLAUDE.md  CLAUDE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_EXAMPLES.md  DEPLOYMENT_MODERNIZATION_PLAN.md  DOCKER.md  Dockerfile  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_PLAN.md  Inventorium_README.md  MANIFEST.in  Makefile  PM2_ACTIONS_README.md  PRIVACY_NOTICE.md  README.md  ROADMAP.md  TERRARIA_MCP_INTEGRATION.md  TODO.md  __init__.py  bak_client_secrets.json  build-and-publish-pypi.sh  build-and-push.sh  config.env.example  create_todo.py  dashboard-update-section.json  docker-compose.yml  docker-push.sh  docker-setup.sh  ecosystem.config.js  firewall_rules.txt  fix_fastmcp_debug.sh  gateway_details_template.html  glama.json  mcp.json  package-lock.json  (+23 more)
.claude/: settings.json
.claude_temp/: last_tool_use_id.txt
.githooks/: pre-push
Omnispindle/: __init__.py  __main__.py  middleware.py  scheduler.py  sse_test.py  tools.py  utils.py
config/: mosquitto.conf
dashboard/: .cursorrules  README.md  deploy_flow_with_mcp.py  deploy_to_nodered.sh  gateway_stats_dashboard.json  gateway_stats_dashboard_updated.json  mcp_integration.py  mongo_tasks.py  mqtt-logger.js  mqtt_status_lights.json  multi_gateway_stats_dashboard.json  package.json  pm2_controller.json  test_mcp_device_status.py  test_mqtt_status.js
docs/: AI_AGENT_GUIDE.md  AUTH0_DEBUGGING.md  AUTH0_SETUP.md  DUPLICATE_LOGS_FIX.md  INDEX.md  INVENTORIUM_INTEGRATION.md  MCP_CLIENT_AUTH.md  (+3 more)
(+138 files in other folders)
